Fixes Bars Not Showing in Firefox

--- a/packages/chart/src/scss/main.scss
+++ b/packages/chart/src/scss/main.scss
@@ -560,14 +560,14 @@
 
     &.animated {
       .vertical rect,
-      .vertical foreignObject {
+      .vertical foreignObject div {
         opacity: 0;
         animation: growBar 0.5s linear forwards;
         animation-play-state: paused;
       }
 
       .horizontal rect,
-      .horizontal foreignObject {
+      .horizontal foreignObject div {
         opacity: 0;
         animation: growBarH 0.5s linear forwards;
         animation-play-state: paused;
@@ -575,7 +575,7 @@
 
       &.animate {
         rect,
-        foreignObject {
+        foreignObject div {
           animation-play-state: running;
         }
       }
